--- a/lesson3/hm3/project/css/style.css
+++ b/lesson3/hm3/project/css/style.css
@@ -21,6 +21,10 @@ button:hover {
     margin: 0 auto;
 }
 
+.visibility {
+    visibility: hidden;
+}
+
 .header {
     display: flex;
     position: relative;
@@ -47,12 +51,13 @@ button:hover {
 
 .cart__box {
     position: absolute;
-    visibility: hidden;
+    /*visibility: hidden;*/
     right: 0;
     top: 70px;
     width: 350px;
     min-height: 50px;
     background-color: rgb(237, 239, 241);
+    padding: 8px;
 }
 .products {
     display: flex;
@@ -92,3 +97,25 @@ button:hover {
     box-shadow: 1px 2px rgba(5, 9, 5, 0.67);
 }
 
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 1px solid #5d5d5d;
+    padding: 4px;
+}
+
+.cart-item:not(:last-child) {
+    margin-bottom: 8px;
+}
+
+.cart-item__header {
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+.cart__total-price {
+    font-weight: 700;
+    color: #bd1212;
+}
